add first article

--- a/src/content/posts/20250101.md
+++ b/src/content/posts/20250101.md
@@ -1,9 +1,23 @@
 ---
-title: "最初のブログ記事"
+title: "hello world"
+pubDate: "2025-01-01"
+description: "記事作成機能を追加しました。"
+author: "あゆたそ"
+tags: ["astro", "blog"]
+---
+
+ポートフォリオにAstroでMarkdownを使った記事機能を追加しました。
+
+こんな感じでマークダウンで簡単に記事を追加することが出来るようになりました。便利です。
+
+```ts
+---
+title: "hello world"
 pubDate: "2025-01-01"
 description: "ブログ機能を追加しました。"
 author: "あゆたそ"
 tags: ["astro", "blog"]
 ---
 
-これは最初のブログ記事です！AstroでMarkdownを使ったブログ機能を追加しました。
+ポートフォリオにAstroでMarkdownを使ったブログ機能を追加しました。
+```
