--- a/src/content/posts/20250101_2.md
+++ b/src/content/posts/20250101_2.md
@@ -1,8 +1,49 @@
 ---
 title: "2025年の目標"
 pubDate: "2025-01-01"
-description: "記事作成機能を追加しました。"
+description: "2025年も目標を立てた。"
 author: "あゆたそ"
 tags: ["astro", "blog"]
 ---
+
+
+まずは、軽く2024年の目標を振り返る。
+
+## 2024年の振り返り
+
+> 2024の目標
+>1. AtCoder H水
+>2. Kaggle メダル
+>3. ISUCON上位30位
+>4. CTFやる
+>5. OSS Contributeする
+>6. AtCoder A水
+>7. 累積GPA3.0
+>8. fpsしすぎない
+>9. 触ったことない技術を触る
+
+2024年の1月1日に立てた目標がこれだった。
+
+1. AtCoder Hはほとんどやらなかった。そもそも2回しかコンテストに出ていない。カス。とはいえやる時間が無かったので仕方がない。暇があったらやろうくらいの気概でいる。
+2. Kaggleメダルは無理。正直目標高すぎる。ただ、今年なら現実的に狙えるかもしれない
+3. ISUCONはうーんちょっと30位は厳しい。2023年よりは確実に良いところまで行けたが、奥深いし練習するのが難しいので気楽にやっていこうと思う。
+4. CTFはやった。あんまり真剣には取り組んでいないが、ちゃんと2回コンテストに出たのでこれは明確に達成。
+5. OSS Contributeはしてない。する機会が無かった。普段使いしているOSSにバグでもあったらPRでも書こうかとは思っているが...
+6. AlgoはICPC以降全然やらなかった。緑維持でも十分大変なのと、AIに負けて若干やる気が無くなった。最近AI禁止ルールが出来たので復帰もありうる。
+7. GPA3.0は正直無理そう。そもそも3.0も必要ない事に気がついた。筆記試験免除さえもらえればそれ以上頑張る必要は無い。
+8. fpsは10月くらいまではずっとやっていたが、最近やっていない。というよりやる時間がない。
+9. 触ったことのない技術はインターン先でも趣味でもゼミでも沢山触った。良かった。
+
+## 2025年の目標
+
+1. トップカンファレンス採択
+2. 大学院合格
+3. AtCoder Algo 入水
+4. Kaggle メダル
+5. 技術のアウトプットを増やす
+6. インプットも増やす。技術書を沢山読む
+7. 個人でもイ先でも雑ではなくちゃんとした開発をする
+8. 寝坊を減らす
+9. めんどくさがらずにテックカンファレンスに足を運ぶ
+10. 出会いを増やす・素敵な人との出会いを大切にする
 
